--- a/webapp/view/Bureau.view.xml
+++ b/webapp/view/Bureau.view.xml
@@ -1,106 +1,125 @@
-<mvc:View xmlns:mvc="sap.ui.core.mvc" controllerName="com.sap.build.standard.buildPoleEmploiEpf.controller.Bureau" xmlns:m="sap.m" xmlns:core="sap.ui.core">
-    <m:Page showHeader="true" title="Inventaire" showFooter="true" showNavButton="true" navButtonPress="_onPageNavButtonPress4">
-        <m:content>
-            <m:HBox alignItems="Stretch" direction="Row" fitContainer="false" width="auto" height="auto" justifyContent="Center" renderType="Div" visible="true" displayInline="false">
-                <m:items>
-                    <m:VBox alignItems="Stretch" direction="Column" fitContainer="false" width="auto" height="auto" justifyContent="Center" renderType="Div" visible="true" displayInline="false">
-                        <m:items>
-                            <m:HBox alignItems="Stretch" direction="Row" fitContainer="false" width="auto" height="auto" justifyContent="Center" renderType="Div" visible="true" displayInline="false">
-                                <m:items>
-                                    <m:Title text="Récapitulatif" titleStyle="Auto" width="auto" textAlign="Begin" visible="true"/>
-                                </m:items>
-                                <m:layoutData/>
-                            </m:HBox>
-                            <m:HBox alignItems="Stretch" direction="Row" fitContainer="false" width="auto" height="auto" justifyContent="Start" renderType="Div" visible="true" displayInline="false">
-                                <m:items>
-                                    <m:Label text="Prévus : 18" design="Standard" width="100%" required="false" textAlign="Begin" textDirection="Inherit"/>
-                                    <m:ToolbarSpacer width="50px"/>
-                                    <m:Label text="Constatés : 19" design="Standard" width="100%" required="false" textAlign="Begin" textDirection="Inherit"/>
-                                </m:items>
-                                <m:layoutData/>
-                            </m:HBox>
-                            <m:HBox alignItems="Stretch" direction="Row" fitContainer="false" width="auto" height="auto" justifyContent="Center" renderType="Div" visible="true" displayInline="false">
-                                <m:items>
-                                    <core:Icon src="sap-icon://synchronize" size="32px" height="48px" width="48px" visible="true"/>
-                                    <m:ObjectNumber number="1" unit="" emphasized="true" state="None"/>
-                                    <m:ToolbarSpacer width="10px"/>
-                                    <core:Icon src="sap-icon://sys-add" size="32px" height="48px" width="48px" visible="true"/>
-                                    <m:ObjectNumber number="1" unit="" emphasized="true" state="None"/>
-                                    <m:ToolbarSpacer width="10px"/>
-                                    <core:Icon src="sap-icon://bar-code" size="48px" height="48px" width="48px" visible="true"/>
-                                    <m:ObjectNumber number="+ 3" unit="" emphasized="true" state="None"/>
-                                </m:items>
-                                <m:layoutData/>
-                            </m:HBox>
-                        </m:items>
-                        <m:layoutData/>
-                    </m:VBox>
-                </m:items>
-                <m:layoutData/>
-            </m:HBox>
-            <m:HBox alignItems="Stretch" direction="Row" fitContainer="false" width="auto" height="auto" justifyContent="Center" renderType="Div" visible="true" displayInline="false">
-                <m:items>
-                    <m:VBox alignItems="Stretch" direction="Column" fitContainer="false" width="auto" height="auto" justifyContent="Center" renderType="Div" visible="true" displayInline="false">
-                        <m:items>
-                            <m:HBox alignItems="Stretch" direction="Row" fitContainer="false" width="auto" height="auto" justifyContent="Center" renderType="Div" visible="true" displayInline="false">
-                                <m:items>
-                                    <m:Link text="" textAlign="Begin" width="auto" target="_blank" wrapping="false" enabled="true" visible="true" emphasized="false" subtle="false"/>
-                                </m:items>
-                                <m:layoutData/>
-                            </m:HBox>
-                            <m:HBox alignItems="Start" direction="Row" fitContainer="false" width="auto" height="auto" justifyContent="Start" renderType="Div" visible="true" displayInline="false">
-                                <m:items>
-                                    <m:Title text="Biens inventoriés :" titleStyle="Auto" width="auto" textAlign="Begin" visible="true"/>
-                                </m:items>
-                                <m:layoutData/>
-                            </m:HBox>
-                        </m:items>
-                        <m:layoutData/>
-                    </m:VBox>
-                </m:items>
-                <m:layoutData/>
-            </m:HBox>
-            <m:List id="sap_Responsive_Page_0-content-sap_m_List-1511558751838-3ff835262cd8d1b30edd966c1_S1-2217dfa30e3813430edd96af2_S2-34b26c6ead123d140ee0994b6_S6-884194e29b005eff0ee0a3257_S7" mode="SingleSelectMaster" headerText="" footerText="" backgroundDesign="Solid" showSeparators="All" growing="true" growingThreshold="20" growingScrollToLoad="true" itemPress="_onListItemPress4" items="{/BienSet}">
-                <m:infoToolbar>
-                    <m:Toolbar width="100%" height="auto" design="Auto" visible="false" enabled="true">
-                        <m:content>
-                            <m:Label text="Label" design="Standard" width="100%" required="false" textAlign="Begin" textDirection="Inherit"/>
-                        </m:content>
-                    </m:Toolbar>
-                </m:infoToolbar>
-                <m:headerToolbar>
-                    <m:Toolbar visible="true" enabled="true" design="Solid">
-                        <m:content>
-                            <m:SearchField placeholder="Rechercher un bien" showSearchButton="true" visible="true" width="100%" liveChange="_onSearchFieldLiveChange4"/>
-                        </m:content>
-                    </m:Toolbar>
-                </m:headerToolbar>
-                <m:items>
-                    <m:ObjectListItem intro="" title="{name}" icon="{image}" number="{path: 'number', type: 'sap.ui.model.type.Float', formatOptions: { maxFractionDigits: 2 }}" numberUnit="" numberState="None" type="Active" selected="true" showMarkers="false">
-                        <m:attributes/>
-                        <m:firstStatus/>
-                        <m:secondStatus/>
-                    </m:ObjectListItem>
-                </m:items>
-            </m:List>
-        </m:content>
-        <m:footer>
-            <m:Bar design="Auto">
-                <m:contentLeft>
-                    <m:Button text="Créer" type="Default" icon="sap-icon://add" iconFirst="true" width="auto" enabled="true" visible="true" iconDensityAware="false" press="_onButtonPress7"/>
-                </m:contentLeft>
-                <m:contentMiddle>
-                    <m:Button text="Scanner" type="Default" icon="sap-icon://bar-code" iconFirst="true" width="auto" enabled="true" visible="true" iconDensityAware="false" press="_onButtonPress8"/>
-                </m:contentMiddle>
-                <m:contentRight>
-                    <m:Button text="Valider" type="Default" icon="sap-icon://accept" iconFirst="true" width="auto" enabled="true" visible="true" iconDensityAware="false" press="_onButtonPress9"/>
-                </m:contentRight>
-            </m:Bar>
-        </m:footer>
-        <m:headerContent>
-            <m:Image src="/webapp/resources/logo_pole_emploi.png" height="35px" width="auto" densityAware="false"/>
-        </m:headerContent>
-        <m:subHeader/>
-        <m:customHeader/>
-    </m:Page>
+<mvc:View xmlns:mvc="sap.ui.core.mvc" controllerName="com.sap.build.standard.buildPoleEmploiEpf.controller.Bureau" xmlns:m="sap.m"
+	xmlns:core="sap.ui.core">
+	<m:Page showHeader="true" title="Inventaire" showFooter="true" showNavButton="true" navButtonPress="_onPageNavButtonPress4">
+		<m:content>
+			<m:HBox alignItems="Stretch" direction="Row" fitContainer="false" width="auto" height="auto" justifyContent="Center" renderType="Div"
+				visible="true" displayInline="false">
+				<m:items>
+					<m:VBox alignItems="Stretch" direction="Column" fitContainer="false" width="auto" height="auto" justifyContent="Center" renderType="Div"
+						visible="true" displayInline="false">
+						<m:items>
+							<m:HBox alignItems="Stretch" direction="Row" fitContainer="false" width="auto" height="auto" justifyContent="Center" renderType="Div"
+								visible="true" displayInline="false">
+								<m:items>
+									<m:Title text="Récapitulatif" titleStyle="Auto" width="auto" textAlign="Begin" visible="true"/>
+								</m:items>
+								<m:layoutData/>
+							</m:HBox>
+							<m:HBox alignItems="Stretch" direction="Row" fitContainer="false" width="auto" height="auto" justifyContent="Start" renderType="Div"
+								visible="true" displayInline="false">
+								<m:items>
+									<m:Label text="Prévus : 18" design="Standard" width="100%" required="false" textAlign="Begin" textDirection="Inherit"/>
+									<m:ToolbarSpacer width="50px"/>
+									<m:Label text="Constatés : 19" design="Standard" width="100%" required="false" textAlign="Begin" textDirection="Inherit"/>
+								</m:items>
+								<m:layoutData/>
+							</m:HBox>
+							<m:HBox alignItems="Stretch" direction="Row" fitContainer="false" width="auto" height="auto" justifyContent="Center" renderType="Div"
+								visible="true" displayInline="false">
+								<m:items>
+									<core:Icon src="sap-icon://synchronize" size="32px" height="48px" width="48px" visible="true"/>
+									<m:ObjectNumber number="1" unit="" emphasized="true" state="None"/>
+									<m:ToolbarSpacer width="10px"/>
+									<core:Icon src="sap-icon://sys-add" size="32px" height="48px" width="48px" visible="true"/>
+									<m:ObjectNumber number="1" unit="" emphasized="true" state="None"/>
+									<m:ToolbarSpacer width="10px"/>
+									<core:Icon src="sap-icon://bar-code" size="48px" height="48px" width="48px" visible="true"/>
+									<m:ObjectNumber number="+ 3" unit="" emphasized="true" state="None"/>
+								</m:items>
+								<m:layoutData/>
+							</m:HBox>
+						</m:items>
+						<m:layoutData/>
+					</m:VBox>
+				</m:items>
+				<m:layoutData/>
+			</m:HBox>
+			<m:HBox alignItems="Stretch" direction="Row" fitContainer="false" width="auto" height="auto" justifyContent="Center" renderType="Div"
+				visible="true" displayInline="false">
+				<m:items>
+					<m:VBox alignItems="Stretch" direction="Column" fitContainer="false" width="auto" height="auto" justifyContent="Center" renderType="Div"
+						visible="true" displayInline="false">
+						<m:items>
+							<m:HBox alignItems="Stretch" direction="Row" fitContainer="false" width="auto" height="auto" justifyContent="Center" renderType="Div"
+								visible="true" displayInline="false">
+								<m:items>
+									<m:Link text="" textAlign="Begin" width="auto" target="_blank" wrapping="false" enabled="true" visible="true" emphasized="false"
+										subtle="false"/>
+								</m:items>
+								<m:layoutData/>
+							</m:HBox>
+							<m:HBox alignItems="Start" direction="Row" fitContainer="false" width="auto" height="auto" justifyContent="Start" renderType="Div"
+								visible="true" displayInline="false">
+								<m:items>
+									<m:Title text="Biens inventoriés :" titleStyle="Auto" width="auto" textAlign="Begin" visible="true"/>
+								</m:items>
+								<m:layoutData/>
+							</m:HBox>
+						</m:items>
+						<m:layoutData/>
+					</m:VBox>
+				</m:items>
+				<m:layoutData/>
+			</m:HBox>
+			<m:List
+				id="sap_Responsive_Page_0-content-sap_m_List-1511558751838-3ff835262cd8d1b30edd966c1_S1-2217dfa30e3813430edd96af2_S2-34b26c6ead123d140ee0994b6_S6-884194e29b005eff0ee0a3257_S7"
+				mode="SingleSelectMaster" headerText="" footerText="" backgroundDesign="Solid" showSeparators="All" growing="true" growingThreshold="20"
+				growingScrollToLoad="true" itemPress="_onListItemPress4" items="{/BienSet}">
+				<m:infoToolbar>
+					<m:Toolbar width="100%" height="auto" design="Auto" visible="false" enabled="true">
+						<m:content>
+							<m:Label text="Label" design="Standard" width="100%" required="false" textAlign="Begin" textDirection="Inherit"/>
+						</m:content>
+					</m:Toolbar>
+				</m:infoToolbar>
+				<m:headerToolbar>
+					<m:Toolbar visible="true" enabled="true" design="Solid">
+						<m:content>
+							<m:SearchField placeholder="Rechercher un bien" showSearchButton="true" visible="true" width="100%" liveChange="_onSearchFieldLiveChange4"/>
+						</m:content>
+					</m:Toolbar>
+				</m:headerToolbar>
+				<m:items>
+					<m:ObjectListItem intro="" title="{name}" icon="{image}"
+						number="{path: 'number', type: 'sap.ui.model.type.Float', formatOptions: { maxFractionDigits: 2 }}" numberUnit="" numberState="None"
+						type="Active" selected="true" showMarkers="false">
+						<m:attributes/>
+						<m:firstStatus/>
+						<m:secondStatus/>
+					</m:ObjectListItem>
+				</m:items>
+			</m:List>
+		</m:content>
+		<m:footer>
+			<m:Bar design="Auto">
+				<m:contentLeft>
+					<m:Button text="Créer" type="Default" icon="sap-icon://add" iconFirst="true" width="auto" enabled="true" visible="true"
+						iconDensityAware="false" press="_onButtonPress7"/>
+				</m:contentLeft>
+				<m:contentMiddle>
+					<m:Button text="Scanner" type="Default" icon="sap-icon://bar-code" iconFirst="true" width="auto" enabled="true" visible="true"
+						iconDensityAware="false" press="_onButtonPress8"/>
+				</m:contentMiddle>
+				<m:contentRight>
+					<m:Button text="Valider" type="Default" icon="sap-icon://accept" iconFirst="true" width="auto" enabled="true" visible="true"
+						iconDensityAware="false" press="_onButtonPress9"/>
+				</m:contentRight>
+			</m:Bar>
+		</m:footer>
+		<m:headerContent>
+			<m:Image src="/webapp/resources/logo_pole_emploi.png" height="35px" width="auto" densityAware="false"/>
+		</m:headerContent>
+		<m:subHeader/>
+		<m:customHeader/>
+	</m:Page>
 </mvc:View>
