--- a/webapp/view/Scan.view.xml
+++ b/webapp/view/Scan.view.xml
@@ -1,79 +1,94 @@
 <mvc:View xmlns:mvc="sap.ui.core.mvc" controllerName="com.sap.build.standard.buildPoleEmploiEpf.controller.Scan" xmlns:m="sap.m">
-    <m:Page showHeader="true" title="Inventaire" showFooter="true" showNavButton="true" navButtonPress="_onPageNavButtonPress">
-        <m:content>
-            <m:HBox alignItems="Stretch" direction="Row" fitContainer="false" width="auto" height="auto" justifyContent="Center" renderType="Div" visible="true" displayInline="false">
-                <m:items>
-                    <m:VBox alignItems="Stretch" direction="Column" fitContainer="false" width="auto" height="auto" justifyContent="Center" renderType="Div" visible="true" displayInline="false">
-                        <m:items>
-                            <m:HBox alignItems="Stretch" direction="Row" fitContainer="false" width="auto" height="auto" justifyContent="Center" renderType="Div" visible="true" displayInline="false">
-                                <m:items>
-                                    <m:Title text="Scan :" titleStyle="Auto" width="auto" textAlign="Begin" visible="true"/>
-                                </m:items>
-                                <m:layoutData/>
-                            </m:HBox>
-                            <m:HBox alignItems="Stretch" direction="Row" fitContainer="false" width="auto" height="auto" justifyContent="Start" renderType="Div" visible="true" displayInline="false">
-                                <m:items>
-                                    <m:Image src="/webapp/resources/black.png" height="150px" width="250px" densityAware="false"/>
-                                </m:items>
-                                <m:layoutData/>
-                            </m:HBox>
-                            <m:Text text="" width="auto" maxLines="1" wrapping="false" textAlign="Begin" textDirection="Inherit"/>
-                            <m:HBox alignItems="Stretch" direction="Row" fitContainer="false" width="auto" height="auto" justifyContent="Center" renderType="Div" visible="true" displayInline="false">
-                                <m:items>
-                                    <m:VBox alignItems="Stretch" direction="Column" fitContainer="false" width="auto" height="auto" justifyContent="Start" renderType="Div" visible="true" displayInline="false">
-                                        <m:items>
-                                            <m:Label text="Code-barres :" design="Standard" width="100%" required="false" textAlign="Begin" textDirection="Inherit"/>
-                                            <m:Input placeholder="123456789" type="Number" showValueHelp="false" enabled="true" visible="true" width="auto" valueHelpOnly="false" maxLength="0"/>
-                                        </m:items>
-                                        <m:layoutData/>
-                                    </m:VBox>
-                                </m:items>
-                                <m:layoutData/>
-                            </m:HBox>
-                            <m:HBox alignItems="Stretch" direction="Row" fitContainer="false" width="auto" height="auto" justifyContent="Center" renderType="Div" visible="true" displayInline="false">
-                                <m:items>
-                                    <m:Text text="" width="auto" maxLines="1" wrapping="false" textAlign="Begin" textDirection="Inherit"/>
-                                </m:items>
-                                <m:layoutData/>
-                            </m:HBox>
-                            <m:HBox alignItems="Stretch" direction="Row" fitContainer="false" width="auto" height="auto" justifyContent="Center" renderType="Div" visible="true" displayInline="false">
-                                <m:items>
-                                    <m:VBox alignItems="Stretch" direction="Column" fitContainer="false" width="auto" height="auto" justifyContent="Start" renderType="Div" visible="true" displayInline="false">
-                                        <m:items>
-                                            <m:Label text="Immobilisation :" design="Standard" width="100%" required="false" textAlign="Begin" textDirection="Inherit"/>
-                                            <m:Input placeholder="Ordinateur" type="Number" showValueHelp="false" enabled="true" visible="true" width="auto" valueHelpOnly="false" maxLength="0"/>
-                                        </m:items>
-                                        <m:layoutData/>
-                                    </m:VBox>
-                                </m:items>
-                                <m:layoutData/>
-                            </m:HBox>
-                        </m:items>
-                        <m:layoutData/>
-                    </m:VBox>
-                </m:items>
-                <m:layoutData/>
-            </m:HBox>
-        </m:content>
-        <m:footer>
-            <m:Bar design="Auto">
-                <m:contentLeft>
-                    <m:Button text="Déclarer" type="Default" icon="sap-icon://cancel-maintenance" iconFirst="true" width="auto" enabled="true" visible="true" iconDensityAware="false" press="_onButtonPress1"/>
-                </m:contentLeft>
-                <m:contentMiddle>
-                    <m:Button text="" type="Default" icon="sap-icon://refresh" iconFirst="true" width="auto" enabled="true" visible="true" iconDensityAware="false"/>
-                    <m:Button text="" type="Default" icon="sap-icon://bar-code" iconFirst="true" width="auto" enabled="true" visible="true" iconDensityAware="false"/>
-                </m:contentMiddle>
-                <m:contentRight>
-                    <m:Button text="" type="Default" icon="sap-icon://add" iconFirst="true" width="auto" enabled="true" visible="true" iconDensityAware="false"/>
-                    <m:Button text="" type="Default" icon="sap-icon://bar-code" iconFirst="true" width="auto" enabled="true" visible="true" iconDensityAware="false"/>
-                </m:contentRight>
-            </m:Bar>
-        </m:footer>
-        <m:headerContent>
-            <m:Image src="/webapp/resources/logo_pole_emploi.png" height="35px" width="auto" densityAware="false"/>
-        </m:headerContent>
-        <m:subHeader/>
-        <m:customHeader/>
-    </m:Page>
+	<m:Page showHeader="true" title="Inventaire" showFooter="true" showNavButton="true" navButtonPress="_onPageNavButtonPress">
+		<m:content>
+			<m:HBox alignItems="Stretch" direction="Row" fitContainer="false" width="auto" height="auto" justifyContent="Center" renderType="Div"
+				visible="true" displayInline="false">
+				<m:items>
+					<m:VBox alignItems="Stretch" direction="Column" fitContainer="false" width="auto" height="auto" justifyContent="Center" renderType="Div"
+						visible="true" displayInline="false">
+						<m:items>
+							<m:HBox alignItems="Stretch" direction="Row" fitContainer="false" width="auto" height="auto" justifyContent="Center" renderType="Div"
+								visible="true" displayInline="false">
+								<m:items>
+									<m:Title text="Scan :" titleStyle="Auto" width="auto" textAlign="Begin" visible="true"/>
+								</m:items>
+								<m:layoutData/>
+							</m:HBox>
+							<m:HBox alignItems="Stretch" direction="Row" fitContainer="false" width="auto" height="auto" justifyContent="Start" renderType="Div"
+								visible="true" displayInline="false">
+								<m:items>
+									<m:Image src="/webapp/resources/black.png" height="150px" width="250px" densityAware="false"/>
+								</m:items>
+								<m:layoutData/>
+							</m:HBox>
+							<m:Text text="" width="auto" maxLines="1" wrapping="false" textAlign="Begin" textDirection="Inherit"/>
+							<m:HBox alignItems="Stretch" direction="Row" fitContainer="false" width="auto" height="auto" justifyContent="Center" renderType="Div"
+								visible="true" displayInline="false">
+								<m:items>
+									<m:VBox alignItems="Stretch" direction="Column" fitContainer="false" width="auto" height="auto" justifyContent="Start" renderType="Div"
+										visible="true" displayInline="false">
+										<m:items>
+											<m:Label text="Code-barres :" design="Standard" width="100%" required="false" textAlign="Begin" textDirection="Inherit"/>
+											<m:Input placeholder="123456789" type="Number" showValueHelp="false" enabled="true" visible="true" width="auto" valueHelpOnly="false"
+												maxLength="0"/>
+										</m:items>
+										<m:layoutData/>
+									</m:VBox>
+								</m:items>
+								<m:layoutData/>
+							</m:HBox>
+							<m:HBox alignItems="Stretch" direction="Row" fitContainer="false" width="auto" height="auto" justifyContent="Center" renderType="Div"
+								visible="true" displayInline="false">
+								<m:items>
+									<m:Text text="" width="auto" maxLines="1" wrapping="false" textAlign="Begin" textDirection="Inherit"/>
+								</m:items>
+								<m:layoutData/>
+							</m:HBox>
+							<m:HBox alignItems="Stretch" direction="Row" fitContainer="false" width="auto" height="auto" justifyContent="Center" renderType="Div"
+								visible="true" displayInline="false">
+								<m:items>
+									<m:VBox alignItems="Stretch" direction="Column" fitContainer="false" width="auto" height="auto" justifyContent="Start" renderType="Div"
+										visible="true" displayInline="false">
+										<m:items>
+											<m:Label text="Immobilisation :" design="Standard" width="100%" required="false" textAlign="Begin" textDirection="Inherit"/>
+											<m:Input placeholder="Ordinateur" type="Number" showValueHelp="false" enabled="true" visible="true" width="auto" valueHelpOnly="false"
+												maxLength="0"/>
+										</m:items>
+										<m:layoutData/>
+									</m:VBox>
+								</m:items>
+								<m:layoutData/>
+							</m:HBox>
+						</m:items>
+						<m:layoutData/>
+					</m:VBox>
+				</m:items>
+				<m:layoutData/>
+			</m:HBox>
+		</m:content>
+		<m:footer>
+			<m:Bar design="Auto">
+				<m:contentLeft>
+					<m:Button text="Déclarer" type="Default" icon="sap-icon://cancel-maintenance" iconFirst="true" width="auto" enabled="true" visible="true"
+						iconDensityAware="false" press="_onButtonPress1"/>
+				</m:contentLeft>
+				<m:contentMiddle>
+					<m:Button text="" type="Default" icon="sap-icon://refresh" iconFirst="true" width="auto" enabled="true" visible="true"
+						iconDensityAware="false"/>
+					<m:Button text="" type="Default" icon="sap-icon://bar-code" iconFirst="true" width="auto" enabled="true" visible="true"
+						iconDensityAware="false"/>
+				</m:contentMiddle>
+				<m:contentRight>
+					<m:Button text="" type="Default" icon="sap-icon://add" iconFirst="true" width="auto" enabled="true" visible="true" iconDensityAware="false"/>
+					<m:Button text="" type="Default" icon="sap-icon://bar-code" iconFirst="true" width="auto" enabled="true" visible="true"
+						iconDensityAware="false"/>
+				</m:contentRight>
+			</m:Bar>
+		</m:footer>
+		<m:headerContent>
+			<m:Image src="/webapp/resources/logo_pole_emploi.png" height="35px" width="auto" densityAware="false"/>
+		</m:headerContent>
+		<m:subHeader/>
+		<m:customHeader/>
+	</m:Page>
 </mvc:View>
